--- a/about.html
+++ b/about.html
@@ -97,16 +97,17 @@
                   <span class="sr-only">Next</span>
                 </a>
               </div>
-              <h2 class="page-header">About</h2>
+              <h2 class="page-header heading-primary-a">About</h2>
               <p>uasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni doloruasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni doloruasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolor</p>
             </div>
             <div class="col-md-4">
               <h2 class="page-header">Lorem Ipsum</h2>
               <ul class="list list-feature">
-                <li><i class="fa fa-check"></i> <span>sam voluptatem quia vconsequunt</span> </li>
-                <li><i class="fa fa-check"></i> <span>sam voluptatem quia vconsequunt</span> </li>
-                <li><i class="fa fa-check"></i> <span>sam voluptatem quia vconsequunt</span> </li>
+                <li><i class="fa fa-check fa-primary fa-4x"></i> <span>sam voluptatem quia vconsequunt</span> </li>
+                <li><i class="fa fa-check fa-primary fa-4x"></i> <span>sam voluptatem quia vconsequunt</span> </li>
+                <li><i class="fa fa-check fa-primary fa-4x"></i> <span>sam voluptatem quia vconsequunt</span> </li>
               </ul>
+              <hr>
               <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
                   <div class="panel-heading" role="tab" id="headingOne">
